--- a/index.html
+++ b/index.html
@@ -1,11 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>نظام إدارة توزيع المياه</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: #007bff;
+            color: #ffffff;
+            padding: 20px;
+            text-align: center;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            color: #ffffff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        }
+        section {
+            margin-bottom: 30px;
+            padding: 15px;
+            border: 2px solid #007bff;
+            border-radius: 5px;
+        }
+        section h2 {
+            color: #007bff;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 5px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            background: #007bff;
+            color: #ffffff;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+        .image-container {
+            text-align: center;
+            margin: 15px 0;
+        }
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        button {
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <h1>نظام إدارة توزيع المياه</h1>
+        <p>تقرير تحليل وتصميم</p>
+        <p>أعده: ربيع فواز، قمرالدين شريان</p>
+    </header>
+    <nav>
+        <a href="#introduction">مقدمة</a>
+        <a href="#scope">نطاق النظام</a>
+        <a href="#target-audience">الفئات المستهدفة</a>
+        <a href="#requirements">المتطلبات</a>
+    </nav>
+    <main>
+        <section id="introduction">
+            <h2>1. المقدمة</h2>
+            <p>تهدف هذه الوثيقة إلى تحليل وتصميم نظام رقمي متكامل لإدارة توزيع المياه في المناطق الريفية.</p>
+            <div class="image-container">
+                <img src="https://via.placeholder.com/600x300.png?text=نظام+إدارة+المياه" alt="نظام إدارة المياه">
+            </div>
+        </section>
+        <section id="scope">
+            <h2>2. نطاق النظام</h2>
+            <ul>
+                <li>تسجيل المستخدمين (مزارعين، مواطنين)</li>
+                <li>إدارة الطلبات</li>
+                <li>جدولة توزيع المياه</li>
+                <li>إصدار الفواتير ومتابعة الاستهلاك</li>
+            </ul>
+            <button onclick="alert('تفاصيل نظام إدارة التوزيع');">اكتشف المزيد</button>
+        </section>
+        <section id="target-audience">
+            <h2>3. الفئات المستهدفة</h2>
+            <ul>
+                <li>المدير العام للنظام</li>
+                <li>مدراء القرى</li>
+                <li>المواطنون</li>
+                <li>المزارعون</li>
+            </ul>
+        </section>
+        <section id="requirements">
+            <h2>4. المتطلبات</h2>
+            <h3>المتطلبات غير الوظيفية</h3>
+            <ul>
+                <li>تحميل واجهات المستخدم خلال 3 ثوانٍ</li>
+                <li>دعم حتى 500 مستخدم متصل في نفس الوقت</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        &copy; 2025 جميع الحقوق محفوظة
+    </footer>
 </body>
 </html>
