--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <header>
         <h1>نظام إدارة توزيع المياه</h1>
         <p>تقرير تحليل وتصميم</p>
-        <p>أعده: ربيع فواز، قمرالدين شريان</p>
+        <p> قمرالدين شريان </p>
     </header>
     <nav>
         <a href="#introduction">مقدمة</a>
@@ -130,7 +130,6 @@
         </section>
     </main>
     <footer>
-        &copy; 2025 جميع الحقوق محفوظة
     </footer>
 </body>
 </html>
