--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </section>
     </main>
     <footer>
-        <p> اعداد وتصميم : قمرالدين شريان &copy; 2025</p>
+        <p>إعداد وتصميم: قمرالدين شريان 2025</p>
     </footer>
 </body>
 </html>
