--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
@@ -116,7 +116,203 @@
         </section>
     </main>
     <footer>
+
+
+
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تحليل تأثير هجمات الفدية على المؤسسات</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4; /* لون خلفية فاتح */
+            color: #333;
+            direction: rtl; /* اتجاه النص من اليمين */
+        }
+        header {
+            background: #34495e; /* لون داكن */
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* تأثير ظل */
+        }
+        h1 {
+            font-weight: bold; /* جعل العنوان بخط عريض */
+            color: #e74c3c; /* لون أحمر مميز */
+        }
+        h2 {
+            margin: 10px 0; /* إضافة مسافة بين العنوان والاسم */
+            color: #ecf0f1; /* لون فاتح */
+            text-align: right; /* محاذاة الاسم إلى اليمين */
+            padding-right: 20px; /* إزاحة الاسم إلى اليمين */
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0; /* إضافة مسافة فوق وتحت الجدول */
+        }
+        th, td {
+            padding: 10px;
+            text-align: right; /* محاذاة النص إلى اليمين */
+            border: 1px solid #ccc; /* حدود خفيفة */
+        }
+        th {
+            background-color: #2980b9; /* لون خلفية العناوين */
+            color: white; /* لون النص */
+        }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            color: #2980b9; /* لون أزرق */
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s; /* تأثير تفاعل */
+        }
+        nav a:hover {
+            color: #3498db; /* لون تفاعل عند المرور */
+        }
+        section {
+            padding: 20px;
+            margin: 10px;
+            background: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* تأثير ظل */
+        }
+        h3 {
+            color: #2980b9; /* لون العناوين */
+        }
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background: #34495e; /* لون داكن */
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>تحليل تأثير هجمات الفدية على المؤسسات</h1>
+        <h2> مقدم البحث م:قمر الدين منير شريان </h2>
+    </header>
+
+    <nav>
+        <a href="#introduction">مقدمة</a>
+        <a href="#problem">مشكلة البحث</a>
+        <a href="#objectives">أهداف البحث</a>
+        <a href="#significance">أهمية البحث</a>
+        <a href="#methodology">منهجية البحث</a>
+        <a href="#findings">نتائج البحث</a>
+        <a href="#recommendations">التوصيات</a>
+        <a href="#conclusion">الخاتمة</a>
+    </nav>
+    
+    <section id="introduction">
+        <h3>مقدمة البحث</h3>
+        <p>في عصر التحول الرقمي، أصبحت البيانات العمود الفقري للمؤسسات، ورافعة أساسية لاستمرارها ونجاحها. ومع تزايد الاعتماد على الأنظمة الرقمية، ظهرت تهديدات إلكترونية متطورة تهدد أمن المعلومات واستقرار الأعمال. واحدة من أبرز هذه التهديدات هي هجمات الفدية (Ransomware Attacks)، وهي هجمات إلكترونية تعتمد على تشفير بيانات الضحية ومن ثم طلب فدية مالية مقابل استرجاعها.</p>
+        <p>تستهدف هذه الهجمات الآن ليس فقط الأفراد أو الشركات الصغيرة، بل امتدت لتطال بنوكًا، مستشفيات، جامعات، وحتى الحكومات، مما أحدث آثارًا مالية وتشغيلية وتنظيمية خطيرة. هذه الهجمات تعكس ضعف الاستعداد الأمني لدى العديد من المؤسسات، وتبرز الحاجة الملحة إلى تعزيز البنية التحتية الأمنية.</p>
+        <p>يهدف هذا البحث إلى تحليل تأثير هجمات الفدية على المؤسسات، من خلال دراسة حالة واقعية لهجوم تعرّضت له شركة Colonial Pipeline عام 2021. كما سيتم تقديم توصيات عملية قائمة على تحليل علمي، تُسهم في الحد من آثار هذه الهجمات وتعزيز الوقاية منها.</p>
+    </section>
+    <section id="problem">
+        <h3>مشكلة البحث</h3>
+        <p>تواجه المؤسسات تحديات متزايدة في التصدي لهجمات الفدية، خاصة مع تطور أدوات القراصنة وضعف البنية التحتية الأمنية في بعض الكيانات. تكمن مشكلة البحث في الإجابة عن التساؤلات التالية:</p>
+        <ul>
+            <li>ما هو تأثير هجمات الفدية على المؤسسات؟</li>
+            <li>ما هي الاستراتيجيات الوقائية التي يمكن تبنيها لمواجهتها بفعالية؟</li>
+        </ul>
+    </section>
+    <section id="objectives">
+        <h3>أهداف البحث</h3>
+        <ul>
+            <li>التعرف على مفهوم وآلية عمل هجمات الفدية.</li>
+            <li>تحليل تأثير هذه الهجمات على الجوانب التقنية، الإدارية، والمالية.</li>
+            <li>دراسة حالة واقعية لهجوم فدية على مؤسسة.</li>
+            <li>تقديم توصيات عملية للوقاية من هذه الهجمات وتقليل آثارها.</li>
+        </ul>
+    </section>
+    <section id="significance">
+        <h3>أهمية البحث</h3>
+        <p>تبرز أهمية هذا البحث في كونه يتناول أحد أخطر التهديدات الرقمية المعاصرة التي قد تؤدي إلى تعطيل المؤسسات بالكامل، وتضر بسمعتها واستقرارها المالي. كما يسهم البحث في توعية المؤسسات بضرورة اتخاذ خطوات استباقية لحماية بنيتها التحتية الرقمية وبياناتها الحيوية.</p>
+    </section>
+    <section id="methodology">
+        <h3>منهجية البحث</h3>
+        <p>يعتمد البحث على المنهج الوصفي التحليلي، من خلال تحليل تقارير سابقة صادرة عن مؤسسات أمنية دولية، بالإضافة إلى دراسة حالة واقعية لهجوم فدية على شركة Colonial Pipeline، بهدف استخلاص نتائج وتقديم توصيات واقعية وقابلة للتطبيق.</p>
+    </section>
+    <section id="findings">
+        <h3>نتائج البحث</h3>
+        <p>أظهرت الدراسة أن هجمات الفدية تؤثر بشكل كبير على استقرار المؤسسات. تم تحديد عدة نتائج رئيسية، منها:</p>
+        <ul>
+            <li>تأثير مباشر على العمليات التشغيلية والمالية للمؤسسات.</li>
+            <li>ضعف الإجراءات الأمنية والتدريب يساهم في نجاح الهجمات.</li>
+            <li>هجمات الفدية ليست النهاية بل بداية لسلسلة مشاكل أمنية وقانونية.</li>
+        </ul>
+    </section>
+    <section id="recommendations">
+        <h3>التوصيات</h3>
+        <ol>
+            <li>إنشاء نسخ احتياطية دورية في مواقع منفصلة.</li>
+            <li>تحديث الأنظمة وسد الثغرات الأمنية باستمرار.</li>
+            <li>استخدام برامج حماية متقدمة.</li>
+            <li>تدريب الموظفين على الأمن السيبراني.</li>
+            <li>إعداد خطة استجابة للطوارئ.</li>
+            <li>تطبيق مبدأ "أقل امتياز" لتقليل صلاحيات الوصول.</li>
+            <li>التعاون مع الجهات الوطنية المختصة بالأمن السيبراني.</li>
+        </ol>
+    </section>
+    <section id="conclusion">
+        <h3>الخاتمة</h3>
+        <p>تُعد هجمات الفدية تهديدًا حقيقيًا للمؤسسات من الجوانب المالية، التشغيلية، والقانونية، كما أظهرت الدراسة أن الوقاية الفعالة تتطلب منهجًا شاملًا يجمع بين التدريب، السياسات، والتقنيات. في ظل الاعتماد المتزايد على الأنظمة الرقمية، تصبح المؤسسات أهدافًا مغرية لمثل هذه الهجمات، مما يحتم عليها تبني استراتيجيات أمنية متقدمة.</p>
+        <p>تناول هذا البحث تحليلًا شاملًا لتأثيرات هجمات الفدية، من خلال عرض المفاهيم الأساسية وتحليل آليات التنفيذ ودراسة حالة لهجوم واقعي، وصولًا إلى استخلاص نتائج وتقديم توصيات وقائية قابلة للتطبيق. إن دفع الفدية لا يمثل نهاية للأزمة، بل قد يكون بداية لسلسلة من التحديات تتعلق بالثقة، التحقيقات، وإعادة بناء البنية التحتية. ولذلك، فإن تبني استراتيجية أمنية فعالة أصبح ضرورة ملحة لكل مؤسسة تسعى إلى الاستدامة في البيئة الرقمية المعاصرة.</p>
+    </section>
+
+    <table>
+        <tr>
+            <th>مقدم البحث</th>
+            <th>معلومات إضافية</th>
+        </tr>
+        <tr>
+            <td>اسم الباحث</td>
+            <td>قمر الدين منير شريان</td>
+        </tr>
+        <tr>
+            <td>التخصص</td>
+            <td>أمن سيبراني</td>
+        </tr>
+        <tr>
+            <td>الجامعة</td>
+            <td> جامعة العلوم والتكنولوجيا اب</td>
+        </tr>
+        <tr>
+            <td>البريد الإلكتروني</td>
+            <td><a href="mailto:qamar2aldeen2004@email.com" style="color: #2980b9;">qamar2aldeen2004@email.com</a></td>
+        </tr>
+        <tr>
+            <td>رقم الهاتف</td>
+            <td>739739927</td>
+        </tr>
+        <tr>
+            <td>التاريخ</td>
+            <td>2025</td>
+        </tr>
+    </table>
+
+    <footer>
+        <p>  اعداد وتصميم م :قمر الدين منير شريان &copy; 2025</p>
+    </footer>
+</body>
+</html>
         <p>إعداد وتصميم: قمرالدين شريان 2025</p>
     </footer>
 </body>
 </html>
+ -->
